apigateway_hw/k8s/deployment_auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      name: auth-service
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
#          image: ogara/otus-microservice:auth-arm
          image: ogara/otus-microservice:auth-amd
          ports:
            - name: web
              containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: ClusterIP
