apigateway_hw/k8s/deployment_user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      name: user-service
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
#          image: ogara/otus-microservice:gate-user-arm
          image: ogara/otus-microservice:gate-user-amd
          ports:
            - name: web
              containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: ClusterIP
