apigateway_hw/k8s/ingress_auth_route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /auth(/|$)(.*)
#            pathType: Prefix
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
